
$Id$


2007.July.19 (0.9.18)
  * Interface Improvements:
    -----------------------
    * Improved 'New' and 'Open' interface:
      + 'Open' dialog no longer includes 'Starter' images
      + 'New' now brings up a selection dialog showing 'Starter' images
        and color choices
      + New images can be given solid background colors
        (which the 'Eraser' tool erases to)

    * Added a 'color picker' entry to the color palette; allows choosing
      from over 50,000 colors.  Used by drawing and Magic tools, as well
      as the new 'New' dialog.

  * Documentation Imrpovements:
    ---------------------------
    * Improved --usage output.

    * Added support for "--papersize help" to list papersizes available
      via libpaper.

  * System-Related Improvements:
    ----------------------------
    * Added an API for developing Magic tools as plug-ins.
      ('.so' shared objects under Linux, '.dll' libraries under Windows, etc.)
      Plugins must provide a number of functions that Tux Paint calls,
      and Tux Paint provides a structure ("magic_api") that includes info.
      (e.g., the running Tux Paint's version number) and pointers to
      useful functions (e.g., getpixel(), putpixel(), etc.)

    * Magic plugin development can be done outside of Tux Paint base
      source-code by using new "tp-magic-config" shell script to query
      for C compiler flags, which points to where "tp_magic_api.h" header
      file is installed.

    * Magic plugin development docs created.  On Linux/Unix, installed into
      /usr/[local/]share/docs/tuxpaint-dev/ by default.

    * Ported existing magic tools to the new Magic tool plug-in system:
      (Blur, Fill, Lighten, Darken, Mirror, Flip, Rainbow, Blocks, Chalk,
      Grass, Negative, Tint, Smudge, Drip, Cartoon, Brick (large & small))

    * Some Magic tools that apply an affect once per click-and-drag no
      longer recalculate the effect on pixels that have already been